--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html {
   --white: white;
   --gray: rgb(156, 152, 152);
   --gray-lv1: rgb(85, 83, 83);
-  --green: #1ED760;
+  --green: #1ed760;
 }
 
 body {
@@ -72,7 +72,6 @@ body {
   padding-top: 20px;
 }
 
-
 /* Grid base */
 .grid-item {
   border: 1px solid var(--black);
@@ -114,7 +113,6 @@ body {
   display: flex;
   justify-content: space-between;
 }
-
 
 #library .library-items {
   margin-bottom: 2%;
@@ -169,8 +167,14 @@ body {
   justify-content: space-between;
 }
 
-#playlist .audio .description h3 {
+#playlist .audio .description h3,
+#playlist-middle-body .audio .description h3 {
   color: var(--white);
+}
+
+#playlist-middle-body .audio:hover .description h3,
+#playlist .audio:hover .description h3 {
+  color: var(--green);
 }
 
 #playlist .audio .audio-description i {
@@ -186,8 +190,16 @@ body {
   color: var(--green);
 }
 
+#playlist-middle-body .audio .description h3.playing {
+  color: var(--green);
+}
+
 #playlist .audio {
-  padding: 10px 0;
+  padding: 10px 0 10px 10px;
+}
+
+#playlist .audio:hover {
+  background-color: var(--gray-lv1);
 }
 
 /* Grid (2) */
@@ -234,6 +246,12 @@ body {
 
 #current-audio {
   display: flex;
+}
+
+.fixed-component {
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 #current-audio img {
@@ -286,7 +304,6 @@ body {
   padding: 0 20px;
   overflow-x: hidden;
   height: 42.75vh;
-
 }
 
 #playlist-middle table {
@@ -318,8 +335,13 @@ body {
 }
 
 #playlist-middle table tbody td {
-  padding-top: 20px;
+  padding: 10px;
 }
+
+#playlist-middle table tbody tr:hover {
+  background-color: var(--gray-lv1);
+}
+
 
 #playlist-middle table tbody tr td:nth-child(4) {
   text-align: end;
@@ -363,7 +385,6 @@ body {
   justify-content: flex-end;
 }
 
-
 #body-right div:nth-child(1) {
   display: flex;
   justify-content: space-between;
@@ -389,4 +410,14 @@ body {
 #body-right img {
   width: 70px;
   height: 70px;
+}
+
+@media screen and (min-height: 900px) {
+  #playlist-middle {
+    height: 57.25vh;
+  }
+
+  #playlist {
+    height: 70vh;
+  }
 }
